[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-commons = { workspace = true }
range-set-blaze = "0.1.13"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false

