[package]
name = "day-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-commons = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false


[lints.clippy]
needless_range_loop = "allow"