[package]
name = "day-25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-commons = { workspace = true }
f128 = "0.2.9"
itertools = "0.12.0"
num = "0.4.1"
pathfinding = "4.6.0"
petgraph = "0.6.4"
rand = "0.8.5"
range-set-blaze = "0.1.13"

[dev-dependencies]
criterion = { workspace = true }

[profile.release]
debug = true

[[bench]]
name = "bench"
harness = false

[lints.clippy]
needless_range_loop = "allow"

